fix: pop up modals on mobile view

--- a/src/app/components/noteeditor/note-editor.component.scss
+++ b/src/app/components/noteeditor/note-editor.component.scss
@@ -29,7 +29,13 @@
   display: flex;
   flex-direction: column;
   gap: 1.2rem;
-
+@media screen and (max-width: 768px) {
+position: fixed;
+top: 65.70%;
+left: 50%;
+width: 100%;
+transform: translate(-50%, -50%);
+}
   h2 {
     margin-bottom: 0.5rem;
     font-size: 1.8rem;
